New stored edges are commited correctly after failed commit